# wl-hosted-host-macos-sim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: executor.c  ipc.c  main.c  network.c  network.h  posix_osal.c  posix_osal.h  sim.h  transport_usb.c  transport_usb.h
src/lwip_port/: lwipopts.h  sys_arch.c  sys_arch.h
src/lwip_port/arch/: cc.h  sys_arch.h
tests/: test_ipc.c  test_posix_osal.c
